--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!Doctype HTML>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8"> 
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>vue JS App</title>
 	<link rel="stylesheet" href="css/style.css">
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -16,6 +17,7 @@
    <script src="https://unpkg.com/vue"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
+	<body>
 <div id="customAPP">
 <div class="container">
 
@@ -43,6 +45,6 @@
 
 	<script src="js/app.js"> </script>
 
-<body>
+
 </body>
 <html>
